lots: - remove/hide chrome scrollbars - set min height of leftsidebar so all in vw or scroll - footer fixed - Incorporate padding into set width -> no increase - AND more

--- a/src/styles/LeftSideBar.css
+++ b/src/styles/LeftSideBar.css
@@ -7,16 +7,20 @@ h3 {
 }
 
 .left-side-bar {
+  /* box-sizing: border-box; */
   position: relative;
   /* overflow: auto; */
   width: 200px;
   /* height: 100%; */
+  min-height: calc(100vh - 260px);
   margin-bottom: 25px;
-  margin-top: 5px;
+  margin-top: 0;
+  /* top: 145px; */
   padding-top: 0px;
   padding-bottom: 50px;
   box-shadow: 10px 10px 5px -2px #1B7680;
   background-color: #AFDFE4;
+  /* background-color: #FFFFFF; */
 
   z-index: 2
 }
