--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,13 +1,13 @@
 .footer {
   width: 100%;
-  height: 45px;
-  padding: 7.5px 0;
+  height: 90px;
+  /* line-height: 90px; */
   background-color: #AFDFE4;
   box-shadow: 10px 10px 5px -2px #1B7680;
   text-align: center;
 
   /* position: absolute; */
-  bottom: 0;
+  /* bottom: 0; */
 
 
 }
